# can_fsm_simulator

./: .gitignore  CMakeLists.txt
include/: can_bus.hpp  can_frame.hpp  controller_node.hpp  fsm.hpp  sensor_node.hpp
src/: can_bus.cpp  controller_node.cpp  fsm.cpp  sensor_node.cpp
tests/: test_controller_node.cpp  test_fsm.cpp  test_sensor_node.cpp
